--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <!-- Press -->
 
   <section class="colored-section" id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tech-logo">
+    <img class="press-logo" src="images/TechCrunch.png" alt="tech-logo">
     <img class="press-logo" src="images/promptbase.png" alt="pb-logo">
     <img class="press-logo" src="images/civitai-removebg-preview-removebg-preview.png" alt="civitai-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
